# data-lake-do-zero

./: .gitignore  README.md  manifest.json  mkdocs.yml  pyproject.toml
src/: bronze_stores.py  ingestion.py
