[tool.poetry]
name = "datalake-do-zero"
version = "0.1.0"
description = ""
authors = ["Marcus Bragion <viniciusbragion@outlook.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
boto3 = "1.35.3"
black = "^24.8.0"
isort = "^5.13.2"
taskipy = "^1.13.0"
mkdocs = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "black . && isort ."